set up test tabletop logic for a in-page table

--- a/app/views/main.html
+++ b/app/views/main.html
@@ -1,23 +1,49 @@
-<div class="jumbotron">
-  <h1>'Allo, 'Allo!</h1>
-  <p class="lead">
-    <img src="images/yeoman.png" alt="I'm Yeoman"><br>
-    Always a pleasure scaffolding your apps.
-  </p>
-  <p><a class="btn btn-lg btn-success" ng-href="#/">Splendid!<span class="glyphicon glyphicon-ok"></span></a></p>
-</div>
 
-<div class="row marketing">
-  <h4>HTML5 Boilerplate</h4>
-  <p>
-    HTML5 Boilerplate is a professional front-end template for building fast, robust, and adaptable web apps or sites.
-  </p>
 
-  <h4>Angular</h4>
-  <p>
-    AngularJS is a toolset for building the framework most suited to your application development.
-  </p>
+  <div class="row marketing">
+      <div class="col-md-4">
+        <div>
+          <img src="http://placehold.it/200x100/dda037.png&text=..." alt="responsive image" class="img-responsive">
+        </div>
+        <div>
+          <h3>Some appropriate copy</h3>
+        </div>
+      </div>
+      <div class="col-md-4">
+        <div>
+          <img src="http://placehold.it/200x100/dda037.png&text=..." alt="responsive image" class="img-responsive">
+        </div>
+        <div>
+          <h3>Some appropriate copy</h3>
+        </div>
+      </div>
+      <div class="col-md-4">
+        <div>
+          <img src="http://placehold.it/200x100/dda037.png&text=..." alt="responsive image" class="img-responsive">
+        </div>
+        <div>
+          <h3>Some appropriate copy</h3>
+        </div>
+      </div>
+  </div>
 
-  <h4>Karma</h4>
-  <p>Spectacular Test Runner for JavaScript.</p>
-</div>
+
+
+  <div class="row marketing" ng-controller="MainCtrl">
+      <table class="table" >
+        <caption>table title and/or explanatory text</caption>
+        <thead>
+          <tr>
+            <th ng-repeat="col in tableTitles">{{col}}</th>
+          </tr>
+        </thead>
+        <tbody>
+          <tr ng-repeat="col in tableData">
+            <td >{{col.animals}}</td>
+            <td >{{col.number}}</td>
+          </tr >
+
+        </tbody>
+      </table>
+    
+  </div>
