--- a/app/styles/main.css
+++ b/app/styles/main.css
@@ -5,6 +5,10 @@
   padding: 0.2em 0;
 }
 
+html{
+  font-family: 'Open Sans', sans-serif;
+}
+
 body {
   padding: 0;
 }
@@ -41,19 +45,24 @@ body {
   margin: 30px 0;
 }
 
-/* Main marketing message and sign up button */
-.jumbotron {
-  text-align: center;
-  border-bottom: 1px solid #e5e5e5;
+.head-img{
+  background-color: #004B8E;
+  height: 200px;
+  width: 200px;
 }
-.jumbotron .btn {
-  font-size: 21px;
-  padding: 14px 24px;
+.head-img>.glyphicon{
+  font-size: 6em;
+  padding: 60px 0px 0px 60px;
+  color: #FFF;
 }
 
 /* Supporting marketing content */
 .marketing {
   margin: 40px 0;
+
+}
+.marketing h3{
+  text-align: center;
 }
 .marketing p + h4 {
   margin-top: 28px;
