--- a/app/styles/main.css
+++ b/app/styles/main.css
@@ -13,6 +13,14 @@ body {
   padding: 0;
 }
 
+form{
+    width: 50%;
+    margin: 0 auto;
+}
+tr td{
+  height: 20px;
+}
+
 /* Everything but the jumbotron gets side spacing for mobile first views */
 .header,
 .marketing,
@@ -49,6 +57,7 @@ body {
   background-color: #004B8E;
   height: 200px;
   width: 200px;
+  margin: 0 auto;
 }
 .head-img>.glyphicon{
   font-size: 6em;
@@ -68,25 +77,3 @@ body {
   margin-top: 28px;
 }
 
-/* Responsive: Portrait tablets and up */
-@media screen and (min-width: 768px) {
-  .container {
-    max-width: 730px;
-  }
-
-  /* Remove the padding we set earlier */
-  .header,
-  .marketing,
-  .footer {
-    padding-left: 0;
-    padding-right: 0;
-  }
-  /* Space out the masthead */
-  .header {
-    margin-bottom: 30px;
-  }
-  /* Remove the bottom border on the jumbotron for visual effect */
-  .jumbotron {
-    border-bottom: 0;
-  }
-}
