--- a/app/styles/main.css
+++ b/app/styles/main.css
@@ -9,6 +9,17 @@ html{
   font-family: 'Open Sans', sans-serif;
 }
 
+.logo{
+  height: 75px;
+  width: 150px;
+  margin-top: 5px;
+}
+.menu-right{
+    margin-top: .5em;
+    width: 150px;
+    text-align: center;
+}
+
 body {
   padding: 0;
 }
@@ -48,9 +59,14 @@ form{
 
 /* Custom page header */
 .header {
-  border-bottom: 1px solid #e5e5e5;
+
   margin-bottom: 10px;
 }
+.color-band{
+  height: 20px;
+  background-color: #404040;
+}
+
 /* Make the masthead heading the same height as the navigation */
 .header h3 {
   margin-top: 0;
@@ -60,10 +76,18 @@ form{
 }
 
 /* Custom page footer */
-.footer {
-  padding-top: 19px;
-  color: #777;
-  border-top: 1px solid #e5e5e5;
+.footer { 
+  
+  
+}
+.nested-footer{
+  background-color: #404040;
+  padding-top: 1.3em;
+}
+.footer p {
+  margin-left: 100px;
+  margin-bottom: 0;
+  color: #f2f2f2;
 }
 
 .container-narrow > hr {
