--- a/app/views/glosary.html
+++ b/app/views/glosary.html
@@ -1,1 +1,21 @@
-<p>This is the about view.</p>
+<div>
+   <div class="row marketing">
+	<h2>Fuel Source Term Glossary:</h2>
+	<h3>Below we have provided the definitions for fuel source terms commonly used to describe certain types of energy and their components.</h3>
+
+	<ul class="glosary-terms">
+		<li><em class="title">Biomass</em> – in the context of energy, often used to describe plant based material.</li>
+		<li><em class="title">Geothermal</em> – heat (thermal) derived from the Earth (geo).</li> 
+		<li><em class="title">Fuel Cell</em> – an electrochemical generator that produces a continuous electric current directly from the chemical reaction between Oxygen and Hydrogen.</li>  
+		<li><em class="title">Hydroelectric</em> – the generation of power derived from the energy of falling water or any other hydraulic source.</li> 
+		<li><em class="title">HVAC</em> – is an acronym for Heating, Ventilation, and Air Conditioning. This system is used to provide heating and cooling services to buildings. This all-inclusive system has become the industrial standard for construction of new buildings.  </li>
+		<li><em class="title">Insulation</em> – is a material that prevents the transmission of heat, electricity, moisture, sound, and shock from one medium to another</li>
+		<li><em class="title">Natural Gas</em> – is a fossil fuel that is formed when layers of buried plants and gases and are exposed </li>
+		<li><em class="title">Organics</em> – is energy generated organic material, in the form of biogas, that is able to be safely and reliably recycled from wet organic materials using a natural process called Anaerobic (no air) digestion. </li>
+		<li><em class="title">Photovoltaic</em> – is a method for generating electric power by the use of solar cells to convert energy from the sun into a flow of electrons.</li>
+		<li><em class="title">Solar</em> – relates to the Sun emitting light. Solar utilizes the Sun’s energy to produce heat or electricity</li>
+		<li><em class="title">Wind</em> – power derived from wind; used to generate mechanical or electrical power</li>
+		<li><em class="title">Wood</em> – arises from many sources including forests, co-products from wood processing, processed wood-based fuels and post-consumer recovered wood. </li>
+	</ul>
+   </div>	
+</div>
