--- a/app/views/main.html
+++ b/app/views/main.html
@@ -5,24 +5,27 @@
         <div class="head-img">
           <span class="glyphicon glyphicon-search"></span>
         </div>
-        <div>
+        <div class="heading-text">
           <h3>Search</h3>
+          <p>Find incentives via the keywords or the provided filters.</p>
         </div>
       </div>
       <div class="col-md-4 col-sm-4">
         <div class="head-img">
           <span class="glyphicon glyphicon-education"></span>
         </div>
-        <div>
+        <div class="heading-text">
           <h3>Learn</h3>
+          <p>Discover money-saving rebates and incentives for your home or business.</p>
         </div>
       </div>
       <div class="col-md-4 col-sm-4">
         <div class="head-img">
            <span class="glyphicon glyphicon-pencil"></span>
         </div>
-        <div>
+        <div class="heading-text">
           <h3>Apply</h3>
+          <p>Click the "Apply" link to visit the program's site.</p>
         </div>
       </div>
   </div>
@@ -94,7 +97,7 @@
   <div class="row marketing" >
     <div class="table-responsive">
       <table class="table" >
-        <caption>table title and/or explanatory text</caption>
+        <caption>Available Incentives and Rebates:</caption>
         <thead>
           <tr>
 
