--- a/app/views/main.html
+++ b/app/views/main.html
@@ -30,6 +30,10 @@
       </div>
   </div>
 
+
+
+<div class="row marketing panel panel-default">
+ <div class="panel-body">
   <form >
     <div class="form-group">
       <div class="input-group">
@@ -42,7 +46,9 @@
   </form>
 
 
-<div class="row marketing">
+
+
+
   <div class="form-group col-md-4 col-sm-4">
     <div class="check-group">
    <h4>Incentive Type</h4>
@@ -90,6 +96,7 @@
        <input type="checkbox" ng-true-value="'loans'" ng-false-value="''" ng-model="searchIncentives.incentiveCategory" > Loans and Grants
     </label>
     </div>
+  </div>
   </div>
 </div>
 
