--- a/app/views/main.html
+++ b/app/views/main.html
@@ -1,12 +1,14 @@
  
 <div ng-controller="MainCtrl">
-  <div class="row marketing">
+  <div class="row marketing heading-group">
       <div class="col-md-4 col-sm-4">
         <div class="head-img">
           <span class="glyphicon glyphicon-search"></span>
+
         </div>
+        <div class="arrow"><span class="glyphicon glyphicon-arrow-right"></span></div>
         <div class="heading-text">
-          <h3>Search</h3>
+          <h3>1. Search</h3>
           <p>Find incentives via the keywords or the provided filters.</p>
         </div>
       </div>
@@ -14,8 +16,9 @@
         <div class="head-img">
           <span class="glyphicon glyphicon-education"></span>
         </div>
+        <div class="arrow"><span class="glyphicon glyphicon-arrow-right"></span></div>
         <div class="heading-text">
-          <h3>Learn</h3>
+          <h3>2. Learn</h3>
           <p>Discover money-saving rebates and incentives for your home or business.</p>
         </div>
       </div>
@@ -24,7 +27,7 @@
            <span class="glyphicon glyphicon-pencil"></span>
         </div>
         <div class="heading-text">
-          <h3>Apply</h3>
+          <h3>3. Apply</h3>
           <p>Click the "Apply" link to visit the program's site.</p>
         </div>
       </div>
