--- a/app/views/main.html
+++ b/app/views/main.html
@@ -9,7 +9,7 @@
         <div class="arrow"><span class="glyphicon glyphicon-arrow-right"></span></div>
         <div class="heading-text">
           <h3>1. Search</h3>
-          <p>Find incentives via the keywords or the provided filters.</p>
+          <p>Search for and find incentives via keywords or the provided filters.</p>
         </div>
       </div>
       <div class="col-md-4 col-sm-4">
@@ -19,7 +19,7 @@
         <div class="arrow"><span class="glyphicon glyphicon-arrow-right"></span></div>
         <div class="heading-text">
           <h3>2. Learn</h3>
-          <p>Discover money-saving rebates and incentives for your home or business.</p>
+          <p>Discover money-saving rebates and incentives for your home or business, and learn what you need to qualify for them.</p>
         </div>
       </div>
       <div class="col-md-4 col-sm-4">
@@ -28,7 +28,7 @@
         </div>
         <div class="heading-text">
           <h3>3. Apply</h3>
-          <p>Click the "Apply" link to visit the program's site.</p>
+          <p>Click the title of the incentive to visit the program's site.</p>
         </div>
       </div>
   </div>
